syntax = "proto3";

package family;

option java_multiple_files = true;
option java_package = "family";
option java_outer_classname = "FamilyProto";

message NodeInfo {
  string host = 1;
  int32 port = 2;
}

message FamilyView {
  repeated NodeInfo members = 1;
}

message Empty {}

message StoredMessage {
  int32 id = 1;
  string text = 2;
}

message MessageId {
  int32 id = 1;
}

message StoreResult {
  bool ok = 1;
  string error = 2;
}

message ChatMessage {
  string text = 1;
  string fromHost = 2;
  int32 fromPort = 3;
  int64 timestamp = 4;
}

service FamilyService {
  rpc Join (NodeInfo) returns (FamilyView);
  rpc GetFamily (Empty) returns (FamilyView);
  rpc ReceiveChat (ChatMessage) returns (Empty);
}

service StorageService {
  rpc Store(StoredMessage) returns (StoreResult);
  rpc Retrieve(MessageId) returns (StoredMessage);
}
